--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -21,7 +21,7 @@
   flex-direction: column;
   padding-bottom: 10px;
   transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
-  box-shadow: 0 0 1px 1px rgba(20,23,28,.1), 0 3px 1px 0 rgba(20,23,28,.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   @include mobile {
     width: 160px;
     margin: 10px;
@@ -63,6 +63,7 @@
 
 .speakers_entry {
   padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #1c1c1c;
   margin: 0px auto;
   @include mobile {
