--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -25,6 +25,7 @@
         switchTheme(0);
       }
     </script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
 
   <body>
@@ -41,6 +42,7 @@
           <div id="particles-js"></div>
           <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
           <p class="site-description">{{ site.description }}</p>
+          <a class="github-button" href="https://github.com/chnsoai" aria-label="Follow @chnsoai on GitHub">Follow @chnsoai</a>
         </header>
       </div>
 
