--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -191,3 +191,17 @@
     align-items: baseline;
     padding: 10px;
 }
+
+.circle-author {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  margin: 0 10px;
+}
+
+.cover-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+}
