--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,13 @@ layout: default
 	<div class="post-header">
 		<div id="particles-js"></div>
 		<h1>{{ page.title }}</h1>
-		<p class="cover-author">{% if page.venue %}{{ page.venue }}{% else %} by {{ page.author }}{% endif %}</p>
+
+		{% if page.venue %}
+			<p class="cover-author">{{ page.venue }}</p>
+		{% else %}
+			<div class="cover-box"><img class="circle-author" src="{{ page.authorpic }}" /><p class="cover-author">by {{ page.author }}</p></div>
+		{% endif %}
+		
 		<p class="cover-date">{{ page.date | date: "%B %e, %Y" }}</p>
 	</div>
 
