--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -42,7 +42,7 @@
           <div id="particles-js"></div>
           <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
           <p class="site-description">{{ site.description }}</p>
-          <a class="github-button" href="https://github.com/chnsoai" aria-label="Follow @chnsoai on GitHub">Follow @chnsoai</a>
+          <div class="social-buttons"><a class="github-button" href="https://github.com/chnsoai" aria-label="Follow @chnsoai on GitHub">Follow @chnsoai</a></div>
         </header>
       </div>
 
