--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -170,8 +170,9 @@
 }
 
 .disqus-button {
-  width: 120px;
-  height: 40px;
+  width: 150px;
+  height: 50px;
+  font-size: 15px;
   padding: 10px;
   border-radius: 4px;
   box-shadow: none;
