--- a/css/light_mode.css
+++ b/css/light_mode.css
@@ -57,18 +57,21 @@ table {
 }
 
 .highlight {
-  background-color: #efefef;
-  padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
-  -moz-box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
-  box-shadow: 3px 3px rgba(0, 0, 0, 0.1);
-  margin: 20px 0 20px 0;
-  overflow: scroll;
+  background-color: #282a36;
+  overflow: auto;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 20px;
 }
 
 code {
-  font-family: 'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: monospace;
+  font-size: 13px;
+}
+@media screen and (max-width: 640px) {
+  code {
+    font-size: 11px;
+  }
 }
 
 .highlight .c {
@@ -284,7 +287,7 @@ code {
 
 /* Name.Namespace */
 .highlight .nx {
-  color: #555;
+  color: #9a9a9a;
 }
 
 /* Name.Other */
@@ -1003,10 +1006,11 @@ hr {
 }
 
 .note {
-  background-color: #eaeaea;
+  background-color: #fafafa;
   padding: 10px;
   margin: 20px 0;
   border-radius: 4px;
+  border: 1px solid #e6e6e6;
 }
 
 .header {
@@ -1058,6 +1062,7 @@ h2 {
 h3 {
   font-size: 20px;
   color: #3a3a3a;
+  margin: 1.5em 0;
 }
 
 h4 {
@@ -1067,8 +1072,8 @@ h4 {
 
 p {
   margin: 15px 0;
-  font-size: 15px;
-  line-height: 1.4;
+  font-size: 16px;
+  line-height: 1.6;
   color: #383838;
 }
 @media screen and (max-width: 640px) {
@@ -1089,11 +1094,10 @@ ul a {
 
 ul a:hover {
   color: #e23d3d;
-  border-bottom: 1px solid white;
 }
 
 a:hover {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid #e23d3d;
 }
 
 ul, ol {
@@ -1107,8 +1111,8 @@ ul {
 }
 
 li {
-  font-size: 15px;
-  line-height: 1.4;
+  font-size: 16px;
+  line-height: 1.6;
 }
 @media screen and (max-width: 640px) {
   li {
@@ -1233,7 +1237,7 @@ img {
 
 .site-description {
   margin: 3px auto !important;
-  color: #b3b3b3;
+  color: #ffffff7a;
   font-size: 16px;
   font-family: "Nunito";
   line-height: 1.7;
@@ -1452,8 +1456,8 @@ footer p {
 }
 
 .entry {
-  max-width: 800px;
-  padding: 20px 30px;
+  max-width: 900px;
+  padding: 40px;
   margin: 0 auto;
   margin-top: 20px;
   background-color: #ffffff;
@@ -1492,11 +1496,6 @@ footer p {
 figure {
   padding: 5px;
   margin: 10px 0;
-}
-
-img.typical-image {
-  border-radius: 5px;
-  border: 3px solid #e9e9e9;
 }
 
 .footer-relative {
@@ -1585,7 +1584,7 @@ img.typical-image {
 }
 
 .toc {
-  width: 35%;
+  width: 50%;
   border: 1px solid #e6e6e6;
   padding: 10px 20px;
   border-radius: 4px;
@@ -1595,6 +1594,10 @@ img.typical-image {
   .toc {
     width: 100%;
   }
+}
+
+.toc h3 {
+  margin: 0;
 }
 
 #particles-js {
@@ -1703,4 +1706,61 @@ table, tr, td {
   justify-content: center;
   align-items: center;
   margin: 10px 0;
+}
+
+.code-head {
+  position: relative;
+  font-size: 12px;
+  font-family: monospace;
+  font-weight: 100;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-top: 20px !important;
+  margin-bottom: 0px !important;
+  padding: 10px;
+  background-color: #1f212b;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  color: white;
+}
+
+@media screen and (max-width: 640px) {
+  .code-head {
+    font-size: 10px;
+  }
+}
+
+.code-head:before {
+  content: none;
+}
+
+.code-head span {
+  padding: 3px 5px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: #fb4c4c;
+  font-weight: bold;
+  border-radius: 3px;
+  border: 1px solid #d6d6d6;
+  cursor: pointer;
+}
+
+.coding {
+  padding: 2px 5px;
+  background-color: #ffe5e5;
+  border-radius: 4px;
+  font-size: 12px;
+  color: #b52727;
+  font-family: monospace;
+}
+
+figcaption {
+  background-color: #f2f2f2;
+  padding: 10px;
+  font-size: 13px;
+  text-align: center;
+  color: black;
+  margin: 0;
 }
