--- a/style.scss
+++ b/style.scss
@@ -80,6 +80,11 @@ h2 {
 h3 {
   font-size: 20px;
   color: #b5b5b5;
+  margin: 1.5em 0;
+}
+
+.toc h3 {
+  margin: 0;
 }
 
 h4 {
@@ -89,8 +94,8 @@ h4 {
 
 p {
   margin: 15px 0;
-  font-size: 15px;
-  line-height: 1.4;
+  font-size: 16px;
+  line-height: 1.6;
   color: #939393;
   @include mobile {
     font-size: 13px;
@@ -126,8 +131,8 @@ ul {
 }
 
 li {
-  font-size: 15px;
-  line-height: 1.4;
+  font-size: 16px;
+  line-height: 1.6;
   @include mobile {
     font-size: 13px;
   }
@@ -458,7 +463,7 @@ footer {
 }
 
 .entry {
-  max-width: 800px;
+  max-width: 900px;
   padding: 20px 30px;
   margin: 0 auto;
   margin-top: 20px;
@@ -494,11 +499,6 @@ footer {
 figure {
   padding: 5px;
   margin: 10px 0;
-}
-
-img.typical-image {
-    border-radius: 5px;
-    border: 3px solid #e9e9e9;
 }
 
 .footer-relative {
@@ -585,7 +585,7 @@ img.typical-image {
 }
 
 .toc {
-  width: 35%;
+  width: 50%;
   border: 1px solid #2a2828;
   padding: 10px 20px;
   border-radius: 4px;
@@ -636,4 +636,22 @@ table, tr, td {
 
 .social-buttons {
   z-index: 4000;
+}
+
+.coding {
+  padding: 2px 5px;
+  background-color: #ffe5e5;
+  border-radius: 4px;
+  font-size: 12px;
+  color: #b52727;
+  font-family: monospace;
+}
+
+figcaption {
+  background-color: #f2f2f2;
+  padding: 10px;
+  font-size: 13px;
+  text-align: center;
+  color: black;
+  margin: 0;
 }
