--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,6 +1,6 @@
 
 .highlight {
-  background-color: #282a36;
+  background-color: #000000;
   overflow: auto;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
