--- a/style.scss
+++ b/style.scss
@@ -640,10 +640,10 @@ table, tr, td {
 
 .coding {
   padding: 2px 5px;
-  background-color: #ffe5e5;
+  background-color: #3d1919;
   border-radius: 4px;
   font-size: 12px;
-  color: #b52727;
+  color: #bdbdbd;
   font-family: monospace;
 }
 
@@ -654,4 +654,43 @@ figcaption {
   text-align: center;
   color: black;
   margin: 0;
+}
+
+.code-head {
+  position: relative;
+  font-size: 12px;
+  font-family: monospace;
+  font-weight: 100;
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+  margin-top: 20px !important;
+  margin-bottom: 0px !important;
+  padding: 10px;
+  background-color: #333333;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  color: white;
+}
+
+@media screen and (max-width: 640px) {
+  .code-head {
+    font-size: 10px;
+  }
+}
+
+.code-head:before {
+  content: none;
+}
+
+.code-head span {
+  padding: 3px 5px;
+  background-color: #ffffff;
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  color: #fb4c4c;
+  font-weight: bold;
+  border-radius: 3px;
+  border: 1px solid #d6d6d6;
+  cursor: pointer;
 }
