--- a/style.scss
+++ b/style.scss
@@ -648,11 +648,12 @@ table, tr, td {
 }
 
 figcaption {
-  background-color: #f2f2f2;
+  background-color: #000;
   padding: 10px;
-  font-size: 13px;
+  font-size: 11px;
+  line-height: 1.6;
   text-align: center;
-  color: black;
+  color: #898989;
   margin: 0;
 }
 
