--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,12 @@
     <script type="text/javascript" src="/js/custom.js"></script>
     <script type="text/javascript">
       var displayMode = sessionStorage.getItem("theme");
-      if(displayMode == undefined || displayMode == "") {
+      if(displayMode == undefined || displayMode == "" || displayMode == null) {
         sessionStorage.setItem("theme", "light");
+        displayMode = "light";
+        switchTheme(0);
       } else {
-        sessionStorage.setItem("theme", displayMode);
+        sessionStorage.setItem("theme", sessionStorage.getItem("theme"));
         switchTheme(0);
       }
     </script>
