--- a/_layouts/profs.html
+++ b/_layouts/profs.html
@@ -18,8 +18,10 @@
     <script type="text/javascript" src="/js/custom.js"></script>
     <script type="text/javascript">
       var displayMode = sessionStorage.getItem("theme");
-      if(displayMode == undefined || displayMode == "") {
+      if(displayMode == undefined || displayMode == "" || displayMode == null) {
         sessionStorage.setItem("theme", "light");
+        displayMode = "light";
+        switchTheme(0);
       } else {
         sessionStorage.setItem("theme", sessionStorage.getItem("theme"));
         switchTheme(0);
