--- a/style.scss
+++ b/style.scss
@@ -736,6 +736,7 @@ figcaption {
 }
 
 .headline-img img {
-    height: 160px;
-    border-radius: 4px;
+  height: 160px;
+  border-radius: 4px;
+  cursor: pointer;
 }
