--- a/style.scss
+++ b/style.scss
@@ -740,3 +740,14 @@ figcaption {
   border-radius: 4px;
   cursor: pointer;
 }
+
+.google-player {
+  width:640px; 
+  height:480px; 
+  display:none; 
+  margin: 0px auto;
+  overflow: hidden;
+  @include mobile {
+    width: 100%;
+  }
+}
