--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,8 +17,8 @@ $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
-$font_header: "Nunito" ;
-$font_body: "Nunito";
+$font_header: "Poppins" ;
+$font_body: "Roboto";
 
 // Mobile breakpoints
 @mixin mobile {
