--- a/style.scss
+++ b/style.scss
@@ -751,3 +751,16 @@ figcaption {
     width: 100%;
   }
 }
+
+.social-buttons {
+    margin: 10px 0;
+}
+
+.blog-category-box .inner_box h5 {
+  font-family: "Roboto";
+}
+
+.toc h3 {
+    margin: 0;
+    font-size: 14px;
+}
