--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -10,7 +10,7 @@
     <![endif]-->
     
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito|Roboto:300|Roboto:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Poppins:700|Roboto:300|Roboto:700" rel="stylesheet">
     <meta name="theme-color" content="#a22222" />
     <link id="main-style-sheet" rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
